Apply styles to main section

--- a/index.html
+++ b/index.html
@@ -12,15 +12,19 @@
 		/>
 
 		<title>Frontend Mentor | Intro component with sign up form</title>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500;600;700&display=swap"
+			rel="stylesheet"
+		/>
 		<link rel="stylesheet" href="css/normalize.css" />
 		<link rel="stylesheet" href="css/main.css" />
 	</head>
 
 	<body>
-		<main class="main">
+		<main>
 			<section class="info-content">
-				<h1>Learn to code by watching others</h1>
-				<p>
+				<p class="title">Learn to code by watching others</p>
+				<p class="paragraph">
 					See how experienced developers solve problems in real-time.
 					Watching scripted tutorials is great, but understanding how
 					developers think is invaluable.
@@ -28,10 +32,12 @@
 			</section>
 
 			<div class="form-content">
-				<a href="#" class="btn btn-purple">
-					<span>Try it free 7 days</span> then $20/mo. thereafter
-					First Name Last
-				</a>
+				<div class="btn-content">
+					<a href="#" class="btn btn-purple">
+						<span>Try it free 7 days</span> then $20/mo. thereafter
+						First Name Last
+					</a>
+				</div>
 				<div class="form">
 					<input
 						type="text"
