--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<body>
 		<main>
 			<section class="info-content">
-				<p class="title">Learn to code by watching others</p>
+				<h1 class="title">Learn to code by watching others</h1>
 				<p class="paragraph">
 					See how experienced developers solve problems in real-time.
 					Watching scripted tutorials is great, but understanding how
@@ -32,10 +32,9 @@
 			</section>
 
 			<div class="form-content">
-				<div class="btn-content">
-					<a href="#" class="btn btn-purple">
+				<div class="btn-purple">
+					<a href="#">
 						<span>Try it free 7 days</span> then $20/mo. thereafter
-						First Name Last
 					</a>
 				</div>
 				<div class="form">
@@ -56,7 +55,9 @@
 						id="password"
 					/>
 
-					<a href="#" class="btn btn-green"></a>
+					<div class="btn-green">
+						<a href="#"> Claim your free trial </a>
+					</div>
 
 					<p>
 						By clicking the button, you are agreeing to our
