Mobile design completed

--- a/index.html
+++ b/index.html
@@ -38,31 +38,36 @@
 					</a>
 				</div>
 				<div class="form">
-					<input
-						type="text"
-						placeholder="First Name"
-						id="firstName"
-					/>
-					<input type="text" placeholder="Last Name" id="lastName" />
-					<input
-						type="email"
-						placeholder="Email Address"
-						id="email"
-					/>
-					<input
-						type="password"
-						placeholder="Password"
-						id="password"
-					/>
+					<div class="form-inputs">
+						<input
+							type="text"
+							placeholder="First Name"
+							id="firstName"
+						/>
+						<input
+							type="text"
+							placeholder="Last Name"
+							id="lastName"
+						/>
+						<input
+							type="email"
+							placeholder="Email Address"
+							id="email"
+						/>
+						<input
+							type="password"
+							placeholder="Password"
+							id="password"
+						/>
 
-					<div class="btn-green">
-						<a href="#"> Claim your free trial </a>
+						<div class="btn-green">
+							<a href="#"> Claim your free trial </a>
+						</div>
+						<p>
+							By clicking the button, you are agreeing to our
+							<a href="#">Terms and Services</a>
+						</p>
 					</div>
-
-					<p>
-						By clicking the button, you are agreeing to our
-						<a href="#">Terms and Services</a>
-					</p>
 				</div>
 			</div>
 		</main>
