Add success alert

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 						<span>Try it free 7 days</span> then $20/mo. thereafter
 					</a>
 				</div>
+				<div class="alert-success" id="alertSuccess">Submitted!</div>
 				<div class="form">
 					<div class="form-inputs">
 						<input
