Fix some accesibility issues

--- a/index.html
+++ b/index.html
@@ -43,32 +43,36 @@
 				<div class="form">
 					<div class="form-inputs">
 						<input
+							name="FirstName"
 							type="text"
 							placeholder="First Name"
 							id="inputFirstName"
 						/>
-						<span class="info" id="labelFirstName"> </span>
+						<label class="info" id="labelFirstName"></label>
 
 						<input
+							name="LastName"
 							type="text"
 							placeholder="Last Name"
 							id="inputLastName"
 						/>
-						<span class="info" id="labelLastName"></span>
+						<label class="info" id="labelLastName"></label>
 
 						<input
+							name="Email"
 							type="email"
 							placeholder="Email Address"
 							id="inputEmail"
 						/>
-						<span class="info" id="labelEmail"></span>
+						<label class="info" id="labelEmail"></label>
 
 						<input
+							name="Password"
 							type="password"
 							placeholder="Password"
 							id="inputPassword"
 						/>
-						<span class="info" id="labelPassword"></span>
+						<label class="info" id="labelPassword"></label>
 
 						<div class="btn-green" id="dataValidation">
 							<a> Claim your free trial </a>
