--- a/index.html
+++ b/index.html
@@ -43,28 +43,28 @@
 				<div class="form">
 					<div class="form-inputs">
 						<input
-							name="FirstName"
+							name="inputFirstName"
 							type="text"
 							placeholder="First Name"
 							id="inputFirstName"
 						/>
-						<label class="info" id="labelFirstName"></label>
+						<label for="inputFirstName" class="info" id="labelFirstName"></label>
 
 						<input
-							name="LastName"
+							name="inputLastName"
 							type="text"
 							placeholder="Last Name"
 							id="inputLastName"
 						/>
-						<label class="info" id="labelLastName"></label>
+						<label for="inputLastName" class="info" id="labelLastName"></label>
 
 						<input
-							name="Email"
+							name="inputEmail"
 							type="email"
 							placeholder="Email Address"
 							id="inputEmail"
 						/>
-						<label class="info" id="labelEmail"></label>
+						<label for="inputEmail" class="info" id="labelEmail"></label>
 
 						<input
 							name="Password"
@@ -72,7 +72,7 @@
 							placeholder="Password"
 							id="inputPassword"
 						/>
-						<label class="info" id="labelPassword"></label>
+						<label for="inputPassword" class="info" id="labelPassword"></label>
 
 						<div class="btn-green" id="dataValidation">
 							<a> Claim your free trial </a>
